--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="not_approved">Не подтверждено</string>
     <string name="approved">Подтверждено</string>
     <string name="you">Вы</string>
+    <string name="delete">Удалить</string>
 </resources>
